# JLCatalouger

./: .gitignore  README.md  README_TODO.md  Reader_Compiler.md  guardrails.md  index.html  package.json  plan.md  pnpm-lock.yaml  research.md  setup.md  techstack.md
.cargo/: config.toml
brand_packs/template/: curations.yaml  mapping.yaml  rules.yaml
brand_packs/template/transforms/: README.md
qa/: acceptance-checklist.md
schema/: attribute-metadata.yaml
scripts/: README.md  vendor-crates.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/pack/: builder.rs
src-tauri/src/reader/: mod.rs  ruled_table.rs  section_index.rs
tests/fixtures/: README.md
