[package]
name = "jlcataloguer"
version = "0.1.0"
description = "JLCatalouger Tauri backend"
authors = ["JLCatalouger"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
